fix scrollbar track in firefox

--- a/src/static/css/layout/_scrollbars.styl
+++ b/src/static/css/layout/_scrollbars.styl
@@ -4,6 +4,7 @@
 +match-media(thin, up)
   *
     scrollbar-width: thin
+    scrollbar-color: rgba(120, 120, 120, 0.35) transparent
 
   // This webkit scrollbar matches Firefox's thin scrollbar fairly closely
   // Track
